language-server/src/tests/snapshots/gleam_language_server__tests__completion__constant_with_module_select.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport wibble\n\ntype Wibble {\n  Wibble\n}\n\nconst pi = 3.14159\n\nfn some_function() {\n  todo\n}\n\nconst my_constant = wibble.W\n"
---

import wibble

type Wibble {
  Wibble
}

const pi = 3.14159

fn some_function() {
  todo
}

const my_constant = wibble.W|


----- Completion content -----
wibble.Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   4_wibble.Wobble
  desc:   app
  edits:
    [13:20-13:28]: "wibble.Wobble"
wibble.Wubble
  kind:   EnumMember
  detail: Wibble
  sort:   4_wibble.Wubble
  desc:   app
  edits:
    [13:20-13:28]: "wibble.Wubble"
wibble.some_constant
  kind:   Constant
  detail: Int
  sort:   4_wibble.some_constant
  desc:   app
  edits:
    [13:20-13:28]: "wibble.some_constant"
wibble.some_function
  kind:   Function
  detail: fn() -> a
  sort:   4_wibble.some_function
  desc:   app
  edits:
    [13:20-13:28]: "wibble.some_function"
