language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_deprecated_function_in_dep_while_typing.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\npub fn wobble() {\n    dep.wibb\n}\n"
---

import dep

pub fn wobble() {
    dep.wibb|
}


----- Completion content -----
