language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_deprecated_types_in_dep.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\npub fn wobble() -> W {\n    todo\n}\n"
---

import dep

pub fn wobble() -> W| {
    todo
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
dep.Wobble
  kind:   Class
  detail: Type
  sort:   4_dep.Wobble
  edits:
    [3:19-3:20]: "dep.Wobble"
