language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_deprecated_values_in_dep.snap
---
source: language-server/src/tests/completion.rs
expression: import dep
---
|import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.Wibble
  kind:   EnumMember
  detail: Wibble
  sort:   4_dep.Wibble
  desc:   app
  edits:
    [1:0-1:0]: "dep.Wibble"
dep.wibble
  kind:   Function
  detail: fn() -> a
  sort:   4_dep.wibble
  desc:   app
  edits:
    [1:0-1:0]: "dep.wibble"
