language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_deprecated_values_in_dep_after_dot.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\npub fn wobble() {\n    dep.\n}\n"
---

import dep

pub fn wobble() {
    dep.|
}


----- Completion content -----
