language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_module_values_when_typing_a_constructor_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport option\npub type Wibble {\n  Wibble(option.)\n}\n"
---
import option
pub type Wibble {
  Wibble(option.|)
}


----- Completion content -----
option.Option
  kind:   Class
  detail: Type
  sort:   4_option.Option
  edits:
    [3:9-3:16]: "option.Option"
