language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_module_values_when_typing_a_return_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport option\npub fn main() -> option. {}\n"
---
import option
pub fn main() -> option.| {}


----- Completion content -----
option.Option
  kind:   Class
  detail: Type
  sort:   4_option.Option
  edits:
    [2:17-2:24]: "option.Option"
