language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_module_values_when_typing_an_annotation.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport option\npub fn main() {\n  let a: option. = todo\n}\n"
---

import option
pub fn main() {
  let a: option.| = todo
}


----- Completion content -----
option.Option
  kind:   Class
  detail: Type
  sort:   4_option.Option
  edits:
    [3:9-3:16]: "option.Option"
