language-server/src/tests/snapshots/gleam_language_server__tests__completion__do_not_show_completions_for_module_values_when_typing_an_argument_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport option\npub fn main(n: option.) {}\n"
---
import option
pub fn main(n: option.|) {}


----- Completion content -----
option.Option
  kind:   Class
  detail: Type
  sort:   4_option.Option
  edits:
    [2:15-2:22]: "option.Option"
